5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1582_2896.log
== TEST (2019-03-16 22:22:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("kaique")
kksiq

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    kksiq
NameError: name 'kksiq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 22:22:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("kaique")
kksiq

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.124382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 5, in <module>
    kksiq
NameError: name 'kksiq' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:22:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")
kksiq

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    kksiq
NameError: name 'kksiq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 22:22:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")
kksiq

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.190173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 5, in <module>
    kksiq
NameError: name 'kksiq' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:27:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")
kksiq

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    kksiq
NameError: name 'kksiq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 22:27:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")
kksiq

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.166674
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 5, in <module>
    kksiq
NameError: name 'kksiq' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:28:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")
kksiq

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    kksiq
NameError: name 'kksiq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:29:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")
kksiq

fgdfgdfg

print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    kksiq
NameError: name 'kksiq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 22:29:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")
kksiq

fgdfgdfg

print(var)
-- EXECUTION TIME:
0.15646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 5, in <module>
    kksiq
NameError: name 'kksiq' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:35:28) 
-- CODE:
nome=int(str(input("Digite o nome:")))

# Leitura de valores de entrada
var = input("kaique")
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome=int(str(input()))
ValueError: invalid literal for int() with base 10: 'Ada_Lovelace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:38:40) 
-- CODE:
nome=int(str(input("")))
if nome<=1
print(leandro)
if nome<=2
print(kaique)
var = input("kaique")
print(var)
-- ERROR:
File "XXXX", line 2
    if nome<=1
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:38:54) 
-- CODE:
nome=int(str(input("")))
if nome<=1:
print(leandro)
if nome<=2:
print(kaique)
var = input("kaique")
print(var)
-- ERROR:
File "XXXX", line 3
    print(leandro)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:39:27) 
-- CODE:
nome=int(str(input("Digite o nome:")))
if nome<=1:
print("leandro")
if nome<=2:
print(kaique)
var = input("kaique")
print(var)
-- ERROR:
File "XXXX", line 3
    print("leandro")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:39:55) 
-- CODE:
nome=int(str(input("Digite o nome:")))
ifnome<=1:
print("leandro")
ifnome<=2:
print(kaique)
var = input("kaique")
print(var)
-- ERROR:
File "XXXX", line 2
    ifnome<=1:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:40:46) 
-- CODE:
nome=int(str(input("2")))
if nome<=1:
print("leandro")
if nome<=2:
print(kaique)
var = input("kaique")
print(var)
-- ERROR:
File "XXXX", line 3
    print("leandro")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:42:35) 
-- CODE:
var=input("digite um nome: ")
Python
var=Python
print("Voce digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:42:43) 
-- CODE:
var=input("digite um nome: ")
Python
var=Python
print("Voce digitou", var)
-- EXECUTION TIME:
0.144508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 2, in <module>
    Python
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:43:08) 
-- CODE:
var=input("digite um nome: ")
Python
var=Python
print("Voce digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:43:22) 
-- CODE:
var=input("Digite um nome: ")
Python
var=Python
print("Voce digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:43:43) 
-- CODE:

Python
var=input("Digite o nome: ")

var=Python
print("Voce digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:43:56) 
-- CODE:
Python
var=input("Digite o nome: ")
var=Python
print("Voce digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:44:04) 
-- CODE:
var=input("Digite o nome: ")
var=Python
print("Voce digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var=Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:44:44) 
-- CODE:
var=input("Digite o nome: ")
Digite o nome: Python
var=Python
print("Voce digitou", var)
-- ERROR:
File "XXXX", line 2
    Digite o nome: Python
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:45:19) 
-- CODE:
print=input("Digite o nome: ")
Digite o nome: Python
var=Python
print("Voce digitou", var)
-- ERROR:
File "XXXX", line 2
    Digite o nome: Python
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:45:25) 
-- CODE:
print=input("Digite o nome: ")
D
var=Python
print("Voce digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    D
NameError: name 'D' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:45:28) 
-- CODE:
print=input("Digite o nome: ")
var=Python
print("Voce digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var=Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:45:59) 
-- CODE:
x=input("Digite o nome: ")
var=Python
print("Voce digitou", x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var=Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:46:05) 
-- CODE:
x=input("Digite o nome: ")
x=Python
print("Voce digitou", x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:46:58) 
-- CODE:
x=input("Digite o nome: ")

print("Voce digitou", x)
-- OUTPUT:
Voce digitou Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:47:18) 
-- CODE:
x=input("Digite o nome: ")

print("Voce digitou", x)
-- OUTPUT:
Voce digitou Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:47:27) 
-- CODE:
x=input("Digite o nome: ")

print("Voce digitou", x)
-- EXECUTION TIME:
0.234187
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce digitou Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce digitou Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:47:37) 
-- CODE:
x=input("Digite o nome: ")

print("Voce digitou", x)
-- OUTPUT:
Voce digitou Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:47:46) 
-- CODE:
x=input("Digite o nome: ")

print("Voce digitou", x)
-- EXECUTION TIME:
0.22102
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce digitou Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce digitou Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:47:50) 
-- CODE:
x=input("Digite o nome: ")

print("Voce digitou", x)
-- OUTPUT:
Voce digitou Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:49:21) 
-- CODE:
var=input("Digite o nome: ")

print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:49:29) 
-- CODE:
var=input("Digite o nome: ")

print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:49:39) 
-- CODE:
var=input("Digite o nome: ")

print(var)
-- EXECUTION TIME:
0.174835
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:46:05) 
-- CODE:
var=input("Digite o nome: ")

print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:46:15) 
-- CODE:
var=input("Digite o nome: ")

print(var)
-- EXECUTION TIME:
0.157498
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
